--- a/app/src/main/res/layout/activity_image_view.xml
+++ b/app/src/main/res/layout/activity_image_view.xml
@@ -8,12 +8,43 @@
 
     <ImageView
         android:id="@+id/imagefullview"
-        android:background="#676A6E"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#676A6E"
+        android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/acwRotation"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="32dp"
+        android:rotation="45"
+        android:rotationY="-180"
+        android:scaleType="fitXY"
+        android:src="@drawable/arrow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.345"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/cwRotation"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="88dp"
+        android:rotation="40"
+        android:rotationX="0"
+        android:rotationY="0"
+        android:scaleType="fitXY"
+        android:src="@drawable/arrow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/acwRotation"
+        app:layout_constraintTop_toTopOf="@+id/acwRotation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
